tests/errors/constructor_pub_new.dang
type Foo {
	pub name: String!

	pub new(n: String!): Foo! {
		self.name = n
		self
	}
}
